# SOLSTICE-Panel

./: .gitignore  Cargo.toml  LICENSE  README.md  pkg.sh
assets/css/: base.css  configuration.css  dashboard.css  led_studio.css  process_explorer.css  studio.css
assets/js/: configuration.js  dashboard.js  led_studio.js  process_explorer.js  studio.js
config/: led-lab.json  oled-pages.json  oled-published.json  solstice-panel.toml
src/: app.rs  config.rs  config_schema.rs  config_store.rs  main.rs  metrics.rs  page_catalog.rs  page_store.rs  published_store.rs  state.rs
src/display/: designer.rs  framebuffer.rs  image_element.rs  mod.rs  oled.rs  render.rs
src/led/: lab.rs  mod.rs  model.rs  offload.rs  strip.rs
src/web/: routes.rs  templates.rs
templates/: base.html  configuration.html  dashboard.html  led_studio.html  process_explorer.html  studio.html
