[package]
name = "solstice-panel"
version = "1.0.0"
edition = "2024"
authors = ["Ethan Robins"]
publish = false

[dependencies]
anyhow = "1.0.102"
askama = "0.14.0"
async-stream = "0.3.6"
axum = "0.8.8"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = true, features = ["clock"] }
embedded-hal = "1.0.0"
embedded-graphics = "0.8.2"
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
linux-embedded-hal = "0.4.1"
resvg = "0.45.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssd1306 = "0.10.0"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
